fixed multiselect on ie11

--- a/webformv2/src/css/main.scss
+++ b/webformv2/src/css/main.scss
@@ -897,3 +897,31 @@ ul.listing {
   list-style-type: none;
   padding-left: .5rem;
 }
+
+
+.multiselect__placeholder {
+  width: 100%;
+}
+
+body .multiselect__select {
+  text-align: right;
+  width: 100%;
+  height: 100%;
+  transition: none;
+
+}
+
+
+body .multiselect--active .multiselect__select{
+  transform: scale(1, -1);
+}
+
+@supports (height: unset) {
+  body .multiselect__select {
+    text-align: right;
+    width: 40px;
+    height: 38px;
+    transition: .2s ease, -webkit-transform .2s ease
+  }
+  
+}
